Fix scaling issues on mobile

--- a/src/components/MainContent.module.css
+++ b/src/components/MainContent.module.css
@@ -3,7 +3,7 @@
     top: 0;
     left: 0;
     width: 100vw;
-    height: 100vh;
+    height: 100dvh;
     overflow: hidden;
     z-index: 1;
     pointer-events: none;
@@ -39,7 +39,7 @@
 .header {
     text-align: center;
     font-family: 'Quicksand', sans-serif;
-    text-shadow: rgb(233 175 175) 0px 0px 1.5em;
+    text-shadow: rgb(233 175 175) 0 0 1.5em;
 }
 
 .title {
@@ -94,6 +94,7 @@
     display: flex;
     gap: 20px;
     align-items: center;
+    width: 100%;
 }
 
 a {
@@ -143,7 +144,6 @@ a {
     cursor: pointer;
     font-size: 1em;
     font-weight: 500;
-    align-self: flex-start;
     margin-bottom: 20px;
     transition: all 0.2s ease;
     pointer-events: auto;
